# Robotics_ICE23_UNITN

./: .gitconfig  .gitignore  .gitmodules  LICENSE  README.md  init_script.sh  initialization.sh  start.sh  start_assignment.sh  start_secure.sh
Documents/: Robotics.pptx
Documents/Doxygen docs/html/: annotated.html  classes.html  classrecognise_area_1_1_recognise_area.html  classrecognise_lego_1_1_lego.html  classrecognise_lego_1_1_recognise_lego.html  classrecognise_lego_o_l_d_1_1_lego.html  classrecognise_lego_o_l_d_1_1_recognise_lego-members.html  classrecognise_lego_o_l_d_1_1_recognise_lego.html  files.html  functions.html  globals.html  globals_defs.html  globals_func.html  group___r_o_s__settings.html  group__assignment_x.html  kinetics_8h.html  menudata.js  (+10 more)
Documents/presentation/: Robotics.pptx
altro/: Set up your Environment.md
altro/include/: Camera.hpp
bash/: manual_photos.sh  start.sh  test_environment.sh  test_planner_and_moviment.sh  test_security.sh  test_spawner.sh  test_vision.sh  tree_command.sh
catkin_ws/: .gitignore
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/src/environment/: CMakeLists.txt  package.xml  test_environment.txt
catkin_ws/src/environment/bash/: test_spawner.sh
catkin_ws/src/environment/brick_models/X1-Y1-Z2/: model.config
catkin_ws/src/environment/brick_models/X1-Y2-Z2-CHAMFER/: model.config
catkin_ws/src/environment/launch/: environment.launch  ros_impedance_controller_climbingrobot.launch  ros_impedance_controller_climbingrobot2.launch  ros_impedance_controller_climbingrobot_slider.launch  ros_impedance_controller_jumpleg.launch  ros_impedance_controller_ur5.launch
catkin_ws/src/environment/legos/X1-Y1-Z2/: model.sdf
catkin_ws/src/environment/legos/X1-Y2-Z1/: model.config  model.sdf
catkin_ws/src/environment/legos/X1-Y2-Z2/: model.sdf
catkin_ws/src/environment/legos/X1-Y2-Z2-CHAMFER/: model.sdf
catkin_ws/src/environment/legos/X1-Y2-Z2-TWINFILLET/: model.sdf
catkin_ws/src/environment/legos/X1-Y3-Z2/: model.sdf
catkin_ws/src/environment/legos/X1-Y4-Z1/: model.sdf
catkin_ws/src/environment/legos/X1-Y4-Z2/: model.sdf
catkin_ws/src/environment/legos/X2-Y2-Z2/: model.sdf
catkin_ws/src/environment/legos/X2-Y2-Z2-FILLET/: model.sdf
catkin_ws/src/environment/models/: README.md
catkin_ws/src/environment/scripts/: LegoGenerator.py  costruzioniParser.py  environment.py  pub.py  spawnLego.py  world_random_generator.py
catkin_ws/src/environment/src/: imageCapture.cpp  spawnLego.cpp
catkin_ws/src/environment/testing/: imageCapture.cpp
catkin_ws/src/environment/worlds/: lego.world  main_scene.world  simulation.world  tavolo_brick.world
catkin_ws/src/environment/worlds/models/X1-Y2-Z2/: model.config
catkin_ws/src/environment/worlds/models/X1-Y2-Z2-TWINFILLET/: model.config
catkin_ws/src/environment/worlds/models/X1-Y3-Z2/: model.config
catkin_ws/src/environment/worlds/models/X1-Y3-Z2-FILLET/: model.config
catkin_ws/src/environment/worlds/models/X1-Y4-Z1/: model.config
catkin_ws/src/environment/worlds/models/X1-Y4-Z2/: model.config
catkin_ws/src/environment/worlds/models/X2-Y2-Z2/: model.config
catkin_ws/src/environment/worlds/models/X2-Y2-Z2-FILLET/: model.config
catkin_ws/src/environment/worlds/models/_spawn/: model.config  model.sdf
catkin_ws/src/environment/worlds/models/build-1/: model.config  model.sdf
catkin_ws/src/environment/worlds/models/build-2/: model.config  model.sdf
catkin_ws/src/environment/worlds/models/robot_base/: model.config
catkin_ws/src/motion/: CMakeLists.txt  package.xml
catkin_ws/src/motion/include/: kinematics.h  kinetics.h
catkin_ws/src/motion/msg/: eventResult.msg  legoFound.msg  legoTask.msg
catkin_ws/src/motion/src/: manualVision.cpp  motionPlanner.cpp  movement.cpp  moviment.cpp  planner.cpp  taskManager.cpp
catkin_ws/src/motion/testing/: manualVision.cpp
catkin_ws/src/vision/: CMakeLists.txt  package.xml  test_vision.txt
catkin_ws/src/vision/scripts/: LegoDetect.py  Vision.py  detect_single_img.ipynb  recogniseArea.py  recogniseLego.py  vision.py
catkin_ws/src/vision/yolov5/runs/train/yolov5s_results/: opt.yaml
catkin_ws/src/vision/yolov5/runs/train/yolov5s_results/weights/: best.pt  last.pt
documents/doxygen/: Doxyfile
documents/presentation/: Robotics.pptx
workbench/: joint_state.sh
(+745 files in other folders)
