<?xml version="1.0"?>
<package format="2">

  <name>motion</name>
  <version>1.0.0</version>
  <description>The motion package of our project</description>
  
  <maintainer email="filippo.conti@studenti.unitn.it">Filippo Conti, Mattia Meneghin e Nicola Gianuzzi</maintainer>
  <license>MIT License</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  
</package>
